# wordpress-tools

./: README.adoc
plugin-conflict-mapper/: .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  CHANGELOG.adoc  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.adoc  DEVELOPER.md  FUNDING.yml  Justfile  MAINTAINERS.md  README.adoc  REVERSIBILITY.md  ROADMAP.adoc  RSR-COMPLIANCE.md  RSR-GOLD-PROGRESS.md  SECURITY.md  composer.json  phpunit.xml  uninstall.php  wp-plugin-conflict-mapper.php
plugin-conflict-mapper/.machine_readable/: AGENTIC.scm  ECOSYSTEM.scm  META.scm  NEUROSYM.scm  PLAYBOOK.scm  STATE.scm
plugin-conflict-mapper/admin/: class-wpcm-admin.php  class-wpcm-ajax.php  class-wpcm-settings.php
plugin-conflict-mapper/data/: known-conflicts.php
plugin-conflict-mapper/docs/: CITATIONS.adoc  SECURITY-INTEGRATION.md
plugin-conflict-mapper/includes/: class-wpcm-cache.php  class-wpcm-cli.php  class-wpcm-conflict-detector.php  class-wpcm-database.php  class-wpcm-installer.php  (+8 more)
praxis/: CHANGELOG.adoc  FUNDING.yml  GOVERNANCE.adoc  INTEGRATION_STATUS.md  README.adoc  REVERSIBILITY.md
secured/: Containerfile  README.adoc  README.md  VERIFICATION-TESTS.md  docker-compose.yml  mu-loader.php  wordpress-secured.ctp.manifest
sinople-theme/: .gitlab-ci.yml  CHANGELOG.adoc  CODE_OF_CONDUCT.md  CRYPTOGRAPHIC-INTEGRATION.md  MAINTAINERS.md  PROJECT_SUMMARY.md  README.adoc  ROADMAP.adoc  RSR_AUDIT.md  RSR_COMPLETION.md  SECURITY.md  SECURITY_INTEGRATION.md  STACK.md  THEME-ENHANCEMENTS.md  TPCF.md  build.sh
sinople-theme/wasm/semantic_processor/: Cargo.toml  build.sh
(+163 files in other folders)
