[package]
name = "semantic_processor"
version = "1.0.0"
edition = "2021"
authors = ["Sinople Theme Contributors"]
description = "WASM-based RDF/OWL semantic processor for Sinople WordPress theme"
license = "GPL-2.0-or-later"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# WASM bindings
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
js-sys = "0.3"

# Sophia RDF - Use separate crates for 0.8
sophia_api = "0.8"
sophia_inmem = { version = "0.8", features = ["all_tests"] }
sophia_turtle = "0.8"

# Utilities
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Optimize for size (WASM)
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization
panic = "abort"     # Smaller binary
strip = true        # Strip symbols

# Network restrictions: cannot run wasm-opt
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
